# bkai

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  tsconfig.json
apps/reader/src/: main.ts
docs/: architecture.md
src/: App.tsx  app.rs  index.css  index.ts  main.rs
src/epub/: mod.rs  model.rs  service.rs
src/server/: auth.ts  stateStore.ts
src/state/: mod.rs
src/ui/: mod.rs
